--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "comma-number": "^2.1.0",
+    "firebase": "^10.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "react-spinners": "^0.14.1",
+    "react-star-ratings": "^2.3.0",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
